@@ -1,0 +1,9 @@
+package engine
+
+// ComputationMode define the mode of computation for the engine.
+type ComputationMode string
+
+const (
+	// SEQUENTIAL will run sequential computations in the engine.
+	SEQUENTIAL ComputationMode = "seq"
+)
