@@ -5,6 +5,10 @@ The format is based on https://keepachangelog.com/en/1.0.0/[Keep a Changelog],
 and this project adheres to https://semver.org/spec/v2.0.0.html[Semantic Versioning].
 
 == [Unreleased]
+=== Added
+
+* Create an engine to run multiple computations against a Node system.
+
 === Changed
 
 * Expose Data field in the Context.
